fixed bug for media scroller causing extra whitespace

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -116,6 +116,7 @@ section h2::before{
 .video-example{
   position:relative;
   padding-top: 1.8rem;
+  overflow-x:hidden;
 }
 
 /* Media Scroller */
